small fix of z-index:

--- a/components/styles/module/Music.module.css
+++ b/components/styles/module/Music.module.css
@@ -61,6 +61,7 @@
     opacity: 0;
     transition: opacity 300ms ease-in-out;
     border-radius: 0.375rem;
+    z-index: 5;
 }
 
 .musicImageGroup:hover .musicHoverOverlay {
